[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/scripts/hurtpartical.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/hitpartical0002.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/hitpartical0001.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/hitpartical0003.png" type="Texture" id=4]

[sub_resource type="Curve" id=16]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=18]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.00681818 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=17]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="hurtpartical" type="Node2D"]
script = ExtResource( 1 )

[node name="hitpart3" type="CPUParticles2D" parent="."]
emitting = false
amount = 7
one_shot = true
speed_scale = 1.2
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 1.0
fract_delta = false
local_coords = false
draw_order = 1
texture = ExtResource( 4 )
direction = Vector2( 0, -300 )
spread = 180.0
gravity = Vector2( 0, 500 )
initial_velocity = 1000.0
initial_velocity_random = 1.0
angular_velocity = 296.47
angular_velocity_random = 1.0
orbit_velocity_random = 1.0
linear_accel = 100.0
linear_accel_random = 1.0
radial_accel = 20.0
angle = 720.0
angle_random = 1.0
angle_curve = SubResource( 16 )
scale_amount = 0.5
scale_amount_random = 1.0
scale_amount_curve = SubResource( 18 )
color_ramp = SubResource( 17 )

[node name="hitpart2" type="CPUParticles2D" parent="."]
emitting = false
amount = 7
one_shot = true
speed_scale = 1.2
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 1.0
local_coords = false
draw_order = 1
texture = ExtResource( 2 )
direction = Vector2( 0, -300 )
spread = 180.0
gravity = Vector2( 0, 500 )
initial_velocity = 1000.0
initial_velocity_random = 1.0
angular_velocity = 296.47
angular_velocity_random = 1.0
orbit_velocity_random = 1.0
linear_accel = 100.0
linear_accel_random = 1.0
radial_accel = 20.0
angle = 720.0
angle_random = 1.0
angle_curve = SubResource( 16 )
scale_amount = 0.5
scale_amount_random = 1.0
scale_amount_curve = SubResource( 18 )
color_ramp = SubResource( 17 )

[node name="hitpart1" type="CPUParticles2D" parent="."]
emitting = false
amount = 7
one_shot = true
speed_scale = 1.2
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 1.0
local_coords = false
draw_order = 1
texture = ExtResource( 3 )
direction = Vector2( 0, -300 )
spread = 180.0
gravity = Vector2( 0, 500 )
initial_velocity = 1000.0
initial_velocity_random = 1.0
angular_velocity = 296.47
angular_velocity_random = 1.0
orbit_velocity_random = 1.0
linear_accel = 100.0
linear_accel_random = 1.0
radial_accel = 20.0
angle = 720.0
angle_random = 1.0
angle_curve = SubResource( 16 )
scale_amount = 0.5
scale_amount_random = 1.0
scale_amount_curve = SubResource( 18 )
color_ramp = SubResource( 17 )
